<resources >
    <string name="ad_unit_id" translatable="false">ca-app-pub-3610949611532769/5140178537</string>
    <string name="test_ad_unit_id"  translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string-array name="servers">
        <item>US</item>
        <item>EU</item>
        <item>SEA</item>
        <item>RU</item>
        
    </string-array>
    <string-array name="clan_basic_sorting">
        <item>Rank</item>
        <item>Name</item>
    </string-array>
    <string-array name="advanced_sorting">
        <item>Battles</item>
        <item>Win Rate</item>
        <item>Mastery</item>
        <item>WN8</item>
        <item>Avg Exp</item>
        <item>Avg Dmg</item>
        <item>K/D</item>
        <item>Name</item>
        <item>Tier 10–1</item>
        <item>Tier 1–10</item>
    </string-array>
    <string name="recent_changes_news">Patch 3.1.3:\n\n- Update WN8 -> v25 \n\n- Fixing some bugs. \n\n\nPatch 3.1.1:\n\n-Bug Fixes and Improvements \n\n\-Renamed FV 4202 - Centurion Action X \n\n\nUpdate 3.1:\n\n-Comparison section added. \n\n-WN8 updated to v23 \n\n-Bug fixes. \n\n-Stronghold data added to player section.\n\n-Stronghold data added to clan section. \n\n\nPatch 3.0.2:\n\n- Bug Fixes for graphs\n\nPatch 3.0.1:\n\n- WN8 v21 -> v22 \n\n- More Graphs \n\n- Bug Fixes \n\nUpdate 3.0:\n\n- Material Redesign of the app. \n\n- New Maps section. \n\n- New default player view added. Choosing this will have the app load that profile first.\n\n- Light theme added. \n\n- Experimental 7 day, 30 day and 60 day WN8s added. \n\n- New graphs and features on both Player and Clan pages. \n\n- Clan download speed was increased. Doesn\'t take as long anymore. \n\n- WN8 updated to v21. \n\n-Clan WN8 and stats is now calculated and stored.\n\n- Android Wear support added.\n\n- Fixed a few issues with sorting.\n\n- Battle Activity now shows you map images.\n\n-Updated to Wargaming\'s latest API.\n\n-Mastery sort fixed.\n\n-Last battles times added to players and clan members.</string>
    <string name="wn8_cap">WN8</string>
    <string name="overall">Overall</string>
    <string name="clan_wars_cap">CW</string>
    <string name="win_rate">Win Rate</string>
    <string name="avg_battles">Avg Battles</string>
    <string name="avg_kills">Avg Kills</string>
    <string name="avg_damage">Avg Damage</string>
    <string name="avg_exp">Avg Exp</string>
    <string name="last_24_wn8">Last 24 WN8</string>
    <string name="last_7_wn8">7 DAY WN8</string>
    <string name="last_30_wn8">30 DAY WN8</string>
    <string name="last_60_wn8">60 DAY WN8</string>
    <string name="battles">Battles</string>
    <string name="k_d">K/D</string>
    <string name="k_d_c">K/D:</string>
    <string name="hit_percentage">Hit %</string>
    <string name="hit_percentage_c">Hit %:</string>
    <string name="dmg_factor">Dmg Factor</string>
    <string name="app_name">Assist</string>
    <string name="language">en</string>
    <string name="search_text">Search:</string>
    <string name="search_fragment_wn_hint">Enter a Vehicle Name or Tier #</string>
    <string name="search_fragment_player_hint">Enter a Username</string>
    <string name="search_fragment_clan_hint">Enter a Clan Name or Abbreviation</string>
    <string name="search_map_hint">Enter a map name</string>
    <string name="settings">Settings</string>
    <string name="drawer_about">SETTINGS &amp; INFO</string>
    <string name="drawer_clan">CLANS</string>
    <string name="drawer_player">PLAYERS</string>
    <string name="drawer_vehicle_stats">VEHICLES WN8 STATS</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_gpd">G/D Calculator</string>
    <string name="drawer_server">SERVER</string>
    <string name="drawer_donate">SUPPORT THIS PROJECT</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_maps">MAPS</string>
    <string name="drawer_battle_activity">Battle Activity</string>
    <string name="search_no_results">No Results</string>
    <string name="info_settings">SETTINGS</string>
    <string name="info_battles_title">Why are my battles not updating right away?</string>
    <string name="info_unknown_text">The Battle isn\'t scheduled yet. This happens frequently when landing</string>
    <string name="info_unknown_title">Why is the time for the battles Unknown?</string>
    <string name="info_battles_text">Wargaming \u00A9 caches Clan Wars battles. This can cause a delay in when the battles are updated and removed from the screen.</string>
    <string name="thank_you_info">vBAddict.net for providing the expected tank values and WN8 information.</string>
    <string name="info_about">ABOUT</string>
    <string name="info_version">Version:</string>
    <string name="info_write_a_review">Write a Review</string>
    <string name="info_email">Contact me by Email</string>
    <string name="info_twitter">Contact me on Twitter</string>
    <string name="info_info">INFO</string>
    <string name="info_thank_you">Thank You</string>
    <string name="list_clan_members">Members:</string>
    <string name="list_clan_added_message">added</string>
    <string name="list_clan_removed_message">removed</string>
    <string name="no_text_error">You must enter a search term</string>
    <string name="no_internet_title">No Connection To Internet</string>
    <string name="no_internet_message">Would you like to turn your internet on?</string>
    <string name="no_internet_neutral_text">Settings</string>
    <string name="error_no_player_found">There seems to be an issue. Try redoing the search and see if it works.</string>
    <string name="error">There was an error</string>
    <string name="battle_activity_no_clans_text">No clans have been saved. Add clans to see Clan War\'s battles times, set an alarm to remind you when the battles is and what province the battles is on.</string>
    <string name="list_battle_title_activity">Battle Activity</string>
    <string name="activity_no_results">No Battles were found</string>
    <string name="no_battles">No Battles</string>
    <string name="system_cant_update_message">You can only update Battle Activity every 5 minutes</string>
    <string name="battle_type_engagement">Engagement</string>
    <string name="battle_type_landing">Landing</string>
    <string name="battle_type_province">Province</string>
    <string name="clan_details_description">Description:</string>
    <string name="alarm_dialog_time_title">When do you want an alarm set?</string>
    <string name="alarm_dialog_before">minutes before</string>
    <string name="alarm_pos_button_text">Set Alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="alarm_dialog_title">Battle Alarm</string>
    <string name="alarm_set">Alarm Set</string>
    <string name="alarm_click_no_alarm_times">The Battle has started or is about to start. Can\'t set an alarm for this battles.</string>
    <string name="scheduling">Scheduling</string>
    <string name="server_change_text">Server changed to</string>
    <string name="clan_details_nothing_returned">Nothing was found for this clan. Maybe wrong Server?</string>
    <string name="recent_changes_title">Update Notes</string>
    <string name="created_by">Created By</string>
    <string name="created_by_name">HALF</string>
    <string name="vehicle_stat_win">Win%:</string>
    <string name="vehicle_stat_frag">Frags:</string>
    <string name="vehicle_stat_def">Def:</string>
    <string name="vehicle_stat_spots">Spots:</string>
    <string name="vehicle_stat_dmg">Damage:</string>
    <string name="notification_text">Battle Alarm</string>
    <string name="pager_clan_details">CLAN DETAILS</string>
    <string name="pager_clan_members">MEMBERS</string>
    <string name="pager_clan_query">QUERY</string>
    <string name="details_cap">DETAILS</string>
    <string name="pager_tanks">TANKS</string>
    <string name="player_details_win8">WN8:</string>
    <string name="avg_dmg">Avg Dmg:</string>
    <string name="win_percentage_c">Win %:</string>
    <string name="avg_exp_c">Avg Exp:</string>
    <string name="battles_c">Battles:</string>
    <string name="player_details_player_stats">Player Stats</string>
    <string name="player_details_player_tanks">Advanced Player Info</string>
    <string name="player_details_tank_name_col">Name</string>
    <string name="win_percentage">Win %</string>
    <string name="player_details_tank_mastery_col">Mastery</string>
    <string name="player_details_global_rating">WoT Rating:</string>
    <string name="player_details_num_of_badges">Number of Badges:</string>
    <string name="player_details_badges_m">M:</string>
    <string name="player_details_badges_1">1st:</string>
    <string name="player_details_badges_2">2nd:</string>
    <string name="player_details_badges_3">3rd:</string>
    <string name="player_details_more_details">More Player Stats</string>
    <string name="player_details_tanking_factor">Tanking Factor:</string>
    <string name="player_details_avg_spot_dmg">Avg Spot Dmg:</string>
    <string name="player_details_track_damge">Avg Track Dmg:</string>
    <string name="player_details_blocked_damage">Avg Dmg Blk:</string>
    <string name="player_details_dmg_assist">Avg Dmg Asst:</string>
    <string name="player_details_penetration">Penetration %:</string>
    <string name="player_details_best_game">Best Stats</string>
    <string name="player_details_account_info">Account Info</string>
    <string name="player_details_created_on">Created On :</string>
    <string name="player_details_last_battle_on">Last Battle On:</string>
    <string name="player_details_best_performance">Best Performance Tank</string>
    <string name="player_details_unknown_tank">Unknown Tank</string>
    <string name="player_details_joined">Joined</string>
    <string name="player_details_days_ago">days ago</string>
    <string name="player_graphs_wn8_nation">WN8 per Nation</string>
    <string name="player_graphs_battles_nation">Battles per Nation</string>
    <string name="player_graphs_tanks_per_tier">Tanks per Tier</string>
    <string name="player_graphs_tanks_per_class">Tanks per Class</string>
    <string name="player_graphs_tanks_per_nation">Tanks per Nation</string>
    <string name="player_details_best_exp">Exp:</string>
    <string name="player_details_best_frags">Kills:</string>
    <string name="player_details_best_damage">Damage:</string>
    <string name="player_details_clan_wars_stats">Clan Wars Stats</string>
    <string name="player_details_no_clan_wars_stats">No Clan Wars stats found</string>
    <string name="player_details_no_stats_found">No stats found</string>
    <string name="insert_all_into_db_start">Installing local tank database</string>
    <string name="dialog_top_yours">Yours</string>
    <string name="dialog_top_average">Average</string>
    <string name="dialog_top_delta">Delta</string>
    <string name="dialog_row_wins">Wins</string>
    <string name="dialog_row_damage">Damage</string>
    <string name="dialog_row_kill_death">K/D</string>
    <string name="dialog_row_spots">Spots</string>
    <string name="dialog_row_def">Def pts</string>
    <string name="donate_title">Would you like to help support this project?</string>
    <string name="donate_message">HALF here, I hope that WoT Community Assistant has assisted you in playing the game World of Tanks. I want to create the best World of Tanks assistant for you. I am working constantly on making this app a better app for you for free. If you would like to support the app, donating or viewing an Ad will help this app so much.</string>
    <string name="fragment_donate_view_ad">View an Ad</string>
    <string name="encyclopedia_wn8_stats">WN8 Stats</string>
    <string name="patreon" translatable="false">Patreon</string>
</resources>