<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/donate_title"
        android:id="@+id/textView1"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/donate_message"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center_horizontal" />

    <!--<WebView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/donation_webview"-->
        <!--android:layout_marginTop="20dp"></WebView>-->


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patreon"
        android:id="@+id/donation_paypal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_donate_view_ad"
        android:id="@+id/donation_view_ad"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/donation_view_ad_progress"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />
</LinearLayout>